--- a/src/ApplicationResources_en.properties
+++ b/src/ApplicationResources_en.properties
@@ -415,7 +415,7 @@ errors.minlength={0} can not be less than {1} characters.
 errors.maxlength={0} can not be greater than {1} characters.
 errors.invalid={0} is invalid.
 over.max.textbox={0} is over {1} characters
-over.limit.textbox={0} is over {1} lines. Max number of lines is {1}
+over.limit.textbox=Mainframe Message: {0} cannot have more than {1} lines of text
 errors.byte={0} must be a byte.
 errors.short={0} must be a short.
 errors.integer={0} must be an integer.
