--- a/src/ApplicationResources_en.properties
+++ b/src/ApplicationResources_en.properties
@@ -31,6 +31,7 @@ msg.ui.edit.rule=UI Message: {0}
 error.start.date=Start Date has to be EQUAL TO or GREATER THAN Status Effective Date
 error.policy.less.start.date={0} cannot be less then Policy Effective Date
 error.person.less.start.date={0} cannot be less then Person Effective Date
+error.condition.desc.text={0} on line {1} requires text 
 msg.offer.in.no.rider=Please add Rider, prior to adding: {0} 
 warning.add.amendment=WARNING: Have you added your amendment {0} 
 error.invalid.date=Invalid Date format: {0}
