--- a/src/ApplicationResources_en.properties
+++ b/src/ApplicationResources_en.properties
@@ -1144,3 +1144,28 @@ MailDetailMessage=DETAIL EMAIL MESSAGE FOR EVENT TRACKER APP ADD HAS NOT YET TO 
 emailSubject=Initiating Memo Process for APP ADD doctype event.
 ##End USR 7930
 button.title.help=Help
+
+button.title.help=Help
+
+#Button labels
+button.ok=Ok
+button.cancel=Cancel
+
+#Admin Page title
+cacheRefresh.title=Cache Refresh
+cacheRefresh.title.tooltip=Cache Refresh Page
+
+acmic.refresh.title=Refresh ACMIC Cache
+epm.refresh.title=Refresh EPM Cache
+
+adminTab.title=Admin
+adminTab.title.tooltip=Admin Tools Page
+
+logs.title=Logs
+logs.title.tooltip=Logs Page
+
+refersh.acmic.error=Error encountered when refreshing ACMIC Cache
+refresh.epm.error=Error encountered when refreshing EPM Cache
+
+refresh.acmic.success=ACMIC Cache refresh successful
+refresh.epm.success=EPM Cache refresh successful
