--- a/src/ApplicationResources_en.properties
+++ b/src/ApplicationResources_en.properties
@@ -1157,6 +1157,7 @@ cacheRefresh.title.tooltip=Cache Refresh Page
 
 acmic.refresh.title=Refresh ACMIC Cache
 epm.refresh.title=Refresh EPM Cache
+ias.refresh.title=Refresh IAS Cache
 
 adminTab.title=Admin
 adminTab.title.tooltip=Admin Tools Page
@@ -1166,6 +1167,8 @@ logs.title.tooltip=Logs Page
 
 refersh.acmic.error=Error encountered when refreshing ACMIC Cache
 refresh.epm.error=Error encountered when refreshing EPM Cache
+refresh.ias.error=Error encountered when refreshing IAS Cache
 
 refresh.acmic.success=ACMIC Cache refresh successful
 refresh.epm.success=EPM Cache refresh successful
+refresh.ias.success=IAS Cache refresh successful
