--- a/src/ApplicationResources_en.properties
+++ b/src/ApplicationResources_en.properties
@@ -1127,6 +1127,7 @@ std.event.code.invalid.msg=This event code is not supported in this release: {0}
 remote.exception.msg=A remote exception occured while calling Web Service: {0} with Policy Number: {1} \rContact Help-Desk with this Web Service and Policy Information.  
 remote.exception.msg.personid=A remote exception occured while calling Web Service: {0} with Person Id: {1} \rContact Help-Desk with this Web Service and Policy Information.
 service.exception.msg=A service exception occured while calling Web Service: {0} with Policy Number: {1} \rContact Help-Desk with this Web Service name and Policy Information.\rError output: {2}
+regular.exception.msg=A general exception occured while calling Web Service: {0} with Policy Number: {1} \rContact Help-Desk with this Web Service name and Policy Information.\rError output: {2}
 service.exception.msg.personid=A service exception occured while calling Web Service: {0} with Person Id: {1} \rContact Help-Desk with this Web Service name and Policy Information.\rError output: {2}
 fill.in.form.msg=An exception occured while returning results to Web Page: {0} :The casuse was {1} with Policy Number: {2} \rContact help-desk with this Web Service and Policy Information.
 fill.in.form.msg.person.id=An exception occured while returning results to Web Page: {0} :The casuse was {1} with Person Id: {2} \rContact help-desk with this Web Service and Person Information.
